Update 05. Dimensional analysis by by co-ocurrence.md

--- a/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
+++ b/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
@@ -1,14 +1,11 @@
 # Dimensional Analysis by Co‑occurrence — *Latent Semantic Analysis*
 
-> *Adapted and expanded from the lecture slides by Felipe Orihuela‑Espina (28 Oct 2024).*  
-> This read‑me mirrors the original slide structure but adds plain‑English commentary, worked examples, and gentle algebra refreshers. Everything is formatted for GitHub Markdown with `$…$` math and matrices rendered as tables.
-
 ---
 
-# Section&nbsp;1 — Latent Semantic Analysis (Problem Statement)
+## 1 — Latent Semantic Analysis (Problem Statement)
 
-## 1.1  LSA credentials
-Latent Semantic Analysis (LSA) surfaced in 1990 (Deerwester _et al._) as a technique for **discovering latent concepts hidden in a document‑term co‑occurrence matrix**. At its core, LSA is just a *Singular Value Decomposition* (SVD) applied to the count matrix, so it travels well beyond text — any tall, rectangular data set with meaningful co‑occurrences can ride the same math.
+### 1.1  LSA credentials
+Latent Semantic Analysis (LSA) surfaced in 1990 as a technique for **discovering latent concepts hidden in a document‑term co‑occurrence matrix**. At its core, LSA is just a *Singular Value Decomposition* (SVD) applied to the count matrix, so it travels well beyond text — any tall, rectangular data set with meaningful co‑occurrences can ride the same math.
 
 Key takeaways:
 
@@ -18,17 +15,17 @@ Key takeaways:
 | “Latent Semantic Indexing (LSI)” in IR | Same idea, different community |
 | Handles non‑square data | Unlike PCA, which starts from a square covariance matrix |
 
-## 1.2  From PCA to LSA — why co‑occurrence beats covariance for text
+### 1.2  From PCA to LSA — why co‑occurrence beats covariance for text
 
 1. **PCA recap**:  
    *Data matrix* $\mathbf{X} \in \mathbb{R}^{m \times n}$ (rows = observations, columns = variables)  
-   Covariance $\mathbf{A}=\operatorname{cov}(\mathbf{X})$ is $n\times n$, symmetric, and amenable to eigendecomposition.
+   Covariance $\mathbf{A}= \text{cov}(\mathbf{X})$ is $n\times n$, symmetric, and amenable to eigendecomposition.
 
 2. **Problem**: For text, rows (terms) and columns (documents) are *different species*. A square covariance matrix would force them into the same type, losing information.
 
 3. **Solution**: Keep the raw *occurrence* matrix and factorise it directly with SVD.
 
-## 1.3  Document–Term Matrix anatomy
+### 1.3  Document–Term Matrix anatomy
 
 *Notation from the slides:*
 
@@ -43,7 +40,7 @@ Key takeaways:
 * Rows $t_i$ are **term vectors**.  
 * Entries $x_{ij}$ are raw counts, TF‑IDF scores, or any weighting scheme.
 
-## 1.4  Goal statement
+### 1.4  Goal statement
 
 > “Construct a semantic space wherein terms and documents that are closely associated lie near one another.”  
 
@@ -51,9 +48,9 @@ SVD arranges that space; cosine similarity between the low‑rank vectors is our
 
 ---
 
-## 1.5  What we already know from the module
+### 1.5  What we already know from the module
 
-### Coordinate bases refresher (Argand diagram)
+#### Coordinate bases refresher (Argand diagram)
 
 A complex number $p = \omega_1 + \omega_2 i$ can be decomposed in the basis $\{e_1=(1,0)^T,\;e_2=(0,i)^T\}$:
 
@@ -61,7 +58,7 @@ $$p = \omega_1 e_1 + \omega_2 e_2$$
 
 Same idea generalises: choose a basis, express vectors as weighted sums of those basis vectors. LSA will **learn** a new basis that captures semantics.
 
-### Eigendecomposition cheat‑sheet
+#### Eigendecomposition cheat‑sheet
 
 For a *square*, symmetrical matrix $\mathbf{A}$:
 
@@ -82,7 +79,7 @@ Example 3×3 covariance matrix (presented as a table):
 
 ---
 
-## 1.6  Putting it all together — SVD in action
+### 1.6  Putting it all together — SVD in action
 
 Given $\mathbf{X}$:
 
@@ -92,7 +89,7 @@ $$ \mathbf{X} = \mathbf{U}\,\mathbf{\Sigma}\,\mathbf{V}^T $$
 * $\mathbf{V}$ — document vectors (orthonormal).  
 * $\mathbf{\Sigma}$ — singular values (importance weights).
 
-### Rank‑$k$ truncation
+#### Rank‑$k$ truncation
 
 Keep only the top $k$ singular values:
 
@@ -100,7 +97,7 @@ $$ \mathbf{X}_k = \mathbf{U}_k\,\mathbf{\Sigma}_k\,\mathbf{V}_k^T $$
 
 *Reduces noise and reveals latent structure.* Typical $k$ values for IR are 100–300.
 
-### Worked micro‑example (toy 4×3 matrix)
+#### Worked micro‑example (toy 4×3 matrix)
 
 | | Doc A | Doc B | Doc C |
 |---|---|---|---|
@@ -113,7 +110,7 @@ SVD captures that *cat* and *dog* cluster (pet concept), while *apple* and *frui
 
 ---
 
-## 1.7  Quick reference
+### 1.7  Quick reference
 
 * **Input**: raw or weighted document–term matrix.  
 * **Process**: centre/weight → SVD → truncate → normalise vectors.  
@@ -121,25 +118,11 @@ SVD captures that *cat* and *dog* cluster (pet concept), while *apple* and *frui
 
 ---
 
-### Further reading
+## 2 — Complex Conjugates & the Conjugate Transpose Matrix
 
-1. Deerwester, S. _et al._ “Indexing by Latent Semantic Analysis.” *JASIS* (1990)  
-2. Landauer, T. & Dumais, S. “A Solution to Plato’s Problem.” *Psychological Review* (1997)
+### 2.1  Complex Conjugate — definition & example
 
----
-
-© 2025-04-27
-
-# Section 2 — Complex Conjugates & the Conjugate Transpose Matrix
-
-> *Expanded notes based on Felipe Orihuela‑Espina’s slide deck (pp. 18‑23, 28 Oct 2024).*  
-> Plain‑English explanations, $…$ math, and GitHub‑friendly matrix tables included.
-
----
-
-## 2.1  Complex Conjugate — definition & example
-
-A complex number $z = a + b i$ has *conjugate* $z^{\*} = a - b i$. citeturn8file2
+A complex number $z = a + b i$ has *conjugate* $z^{\*} = a - b i$.
 
 | $z$ | $z^{\*}$ |
 |-----|---------|
@@ -151,7 +134,7 @@ $$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
 
 ---
 
-## 2.2  Key algebraic properties citeturn8file2
+### 2.2  Key algebraic properties
 
 * **Distributive**  
   $(z + w)^{\*} = z^{\*} + w^{\*}$,   $(z - w)^{\*} = z^{\*} - w^{\*}$  
@@ -168,7 +151,7 @@ $$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
 
 ---
 
-## 2.3  Why do we care? citeturn8file0
+### 2.3  Why do we care?
 
 * **Undo rotations** in the Argand plane.  
   Example: multiplying by $1+i$ rotates a vector 45°. Multiply again by its conjugate $1-i$ to rotate back.
@@ -183,7 +166,7 @@ $$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
 
 ---
 
-## 2.4  Conjugate Transpose (Hermitian Transpose) citeturn8file2
+### 2.4  Conjugate Transpose (Hermitian Transpose)
 
 Given $\mathbf{{A}} \in \mathbb{{C}}^{m \times n}$ with entries $z_{{ij}}$, the **conjugate transpose** $\mathbf{{A}}^{\*}$ is produced by
 
@@ -204,12 +187,9 @@ becomes
 | ⋮ | ⋱ | ⋱ | ⋮ |
 | $z_{{1n}}^{\*}$ | … | $z_{{mn}}^{\*}$ |
 
-*(Table format keeps GitHub’s markdown renderer happy.)*
-
 ---
 
-## 2.5  Unitary Matrices citeturn8file0
-
+### 2.5  Unitary Matrices
 A square complex matrix $\mathbf{{U}}$ is **unitary** if
 
 $$\mathbf{{U}}^{\*}\mathbf{{U}} = \mathbf{{U}}\mathbf{{U}}^{\*} = \mathbf{{I}}$$
@@ -222,23 +202,17 @@ Equivalently, $\mathbf{{U}}^{-1} = \mathbf{{U}}^{\*}$ — the conjugate transpos
 
 ---
 
-### Quick Mnemonic
+#### Quick Mnemonic
 
 > **“Flip and star.”**  
 > To build $\mathbf{{A}}^{\*}$, *flip* the matrix across its diagonal, then add a *star* to every entry.
 
 ---
 
-© 2025-04-27
 
-# Section 3 — Matrix Inversion
+## 3 — Matrix Inversion
 
-> *Expanded notes based on Felipe Orihuela‑Espina’s slide deck (pp. 24‑47, 28 Oct 2024).*  
-> We follow the original flow but add intuitive commentary, fully worked examples, and GitHub‑friendly tables. citeturn9file0
-
----
-
-## 3.1  Inverse Matrix: Concept & Motivation
+### 3.1  Inverse Matrix: Concept & Motivation
 
 An **inverse matrix** plays the same role for matrices that reciprocals play for numbers:
 
@@ -246,7 +220,7 @@ An **inverse matrix** plays the same role for matrices that reciprocals play for
 |---------|----------|
 | $a \cdot a^{-1} = 1$ | $\mathbf{A}\,\mathbf{A}^{-1} = \mathbf{I}$ |
 
-Key points citeturn9file0
+Key points
 * Both left and right products must equal the identity: $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1}\mathbf{A} = \mathbf{I}$.  
 * Only then does $\mathbf{A}^{-1}$ truly “undo” $\mathbf{A}$.
 
@@ -256,29 +230,29 @@ Key points citeturn9file0
 
 ---
 
-## 3.2  Existence & Uniqueness Theorems citeturn9file0
+### 3.2  Existence & Uniqueness Theorems
 
-### Theorem 1 — Only square matrices can have an inverse  
+#### Theorem 1 — Only square matrices can have an inverse  
 *Proof sketch*: Assume $\mathbf{A}$ is $n\times m$ with $n\neq m$.  
 Equality $\mathbf{A}\mathbf{A}^{-1}= \mathbf{I}_n$ forces $\mathbf{A}^{-1}$ to be $m\times n$;  
 $\mathbf{A}^{-1}\mathbf{A}= \mathbf{I}_m$ forces the same size.  
 This is only simultaneously possible if $n=m$.
 
-### Theorem 2 — Inverse is unique (when it exists)  
+#### Theorem 2 — Inverse is unique (when it exists)  
 If $\mathbf{B}$ and $\mathbf{C}$ both satisfy the inverse property,  
 $$\mathbf{B} = \mathbf{B}(\mathbf{A}\mathbf{C}) = (\mathbf{B}\mathbf{A})\mathbf{C} = \mathbf{C}$$
 
-### Theorem 3 — Existence iff $\det(\mathbf{A})\neq 0$  
+#### Theorem 3 — Existence iff $\det(\mathbf{A})\neq 0$  
 The adjoint‑based formula below shows the determinant in the denominator; zero would be illegal.
 
 ---
 
-## 3.3  Adjoint (Cofactor) Method
+### 3.3  Adjoint (Cofactor) Method
 
 Although not the fastest numerically, the adjoint route is pedagogically clean.
 
-### 3.3.1  Cofactors & Cofactor Matrix citeturn9file0
-The **cofactor** $A_{ij}$ equals $(-1)^{i+j}$ times the determinant of the minor obtained by deleting row $i$ and column $j$.
+#### 3.3.1  Cofactors & Cofactor Matrix
+The **cofactor** $A_{ij}$ equals $(-1)^{i+j}$ times the determinant of the minor obtained by deleting row i and column j.
 
 Example $3\times3$ template (sign‑adjusted):
 
@@ -288,17 +262,17 @@ Example $3\times3$ template (sign‑adjusted):
 | **$i=2$** | $A_{21}=a_{13}a_{32}-a_{12}a_{33}$ | $A_{22}=a_{11}a_{33}-a_{13}a_{31}$ | $A_{23}=a_{12}a_{31}-a_{11}a_{32}$ |
 | **$i=3$** | $A_{31}=a_{12}a_{23}-a_{13}a_{22}$ | $A_{32}=a_{13}a_{21}-a_{11}a_{23}$ | $A_{33}=a_{11}a_{22}-a_{12}a_{21}$ |
 
-Collect these into the **cofactor matrix** $\operatorname{cof}(\mathbf{A})$; transpose to get the **adjoint** $\operatorname{adj}(\mathbf{A})$.
+Collect these into the **cofactor matrix** $\text{cof}(\mathbf{A})$; transpose to get the **adjoint** $\text{adj}(\mathbf{A})$.
 
-### 3.3.2  Key identity  
-$$\mathbf{A}\,\operatorname{adj}(\mathbf{A}) = \operatorname{adj}(\mathbf{A})\,\mathbf{A} = \det(\mathbf{A})\mathbf{I}$$
+#### 3.3.2  Key identity  
+$$\mathbf{A}\,\text{adj}(\mathbf{A}) = \text{adj}(\mathbf{A})\,\mathbf{A} = \det(\mathbf{A})\mathbf{I}$$
 
-### 3.3.3  Inverse formula  
-$$\boxed{\;\mathbf{A}^{-1} = \dfrac{\operatorname{adj}(\mathbf{A})}{\det(\mathbf{A})}\;}$$
+#### 3.3.3  Inverse formula  
+$$\boxed{\;\mathbf{A}^{-1} = \dfrac{\text{adj}(\mathbf{A})}{\det(\mathbf{A})}\;}$$
 
 ---
 
-### 3.3.4  Worked Example
+#### 3.3.4  Worked Example
 
 Given  
 
@@ -309,7 +283,7 @@ Given
 | **Row 3** | $2$ | $-1$ | $3$ |
 
 1. **Determinant**: $\det(\mathbf{A})=-26$ (slide computation).  
-2. **Cofactor matrix** $\operatorname{cof}(\mathbf{A})$ (already sign‑corrected):
+2. **Cofactor matrix** $\text{cof}(\mathbf{A})$ (already sign‑corrected):
 
 | | | | |
 |---|---|---|---|
@@ -337,7 +311,7 @@ Given
 
 ---
 
-## 3.4  Practical Notes
+### 3.4  Practical Notes
 
 * **Adjoint method** is $O(n!)$ for determinant → unwise for $n\gt3$.  
 * **Gauss‑Jordan** (augment with $\mathbf{I}$, row‑reduce) is $O(n^3)$ and numerically stabler.  
@@ -345,24 +319,9 @@ Given
 
 ---
 
-### Cheat‑Sheet
+## 4 — Singular Value Decomposition (SVD)
 
-1. Confirm $\det(\mathbf{A})\neq0$.  
-2. Pick your algorithm: adjoint (tiny $n$), Gauss‑Jordan (general), or specialised block/partition methods.  
-3. Remember: *invert only when you must* — solve $\mathbf{A}\mathbf{x}=\mathbf{b}$ with decompositions (LU, QR) instead.
-
----
-
-© 2025-04-27
-
-# Section 4 — Singular Value Decomposition (SVD)
-
-> *Expanded notes based on Felipe Orihuela‑Espina’s slide deck (pp. 48‑59, 28 Oct 2024).*  
-> Think of SVD as “eigendecomposition for everyone”—it works on any rectangular matrix and spits out orthogonal bases plus a power‑ranked diagonal of *singular values*. citeturn10file0
-
----
-
-## 4.1  Core Factorisation
+### 4.1  Core Factorisation
 
 For any $m \times n$ matrix $\mathbf{A}$ there exist  
 
@@ -374,21 +333,21 @@ $$\mathbf{A} = \mathbf{U}\,\boldsymbol{\Sigma}\,\mathbf{V}^{\*}$$
 | $\boldsymbol{\Sigma}$ | $m \times n$ | **Singular values** on the diagonal: $\sigma_{1}\ge\sigma_{2}\ge\dots\ge0$ |
 | $\mathbf{V}^{\*}$ | $n \times n$ | Conjugate‑transpose of $\mathbf{V}$; columns of $\mathbf{V}$ are right singular vectors |
 
-When $\mathbf{A}$ is real, $\mathbf{V}^{\*}$ simplifies to $\mathbf{V}^{\top}$. citeturn10file0
+When $\mathbf{A}$ is real, $\mathbf{V}^{\*}$ simplifies to $\mathbf{V}^{\top}$. 
 
 ---
 
-## 4.2  Interpretation: Rotate → Scale → Derotate
+### 4.2  Interpretation: Rotate → Scale → Derotate
 
 1. **$\mathbf{V}^{\*}$** rotates input coordinates to a “nice” basis.  
 2. **$\boldsymbol{\Sigma}$** scales each axis by $\sigma_{i}$.  
 3. **$\mathbf{U}$** rotates (and possibly reflects) into output space.
 
-Net effect: stretch and re‑orient, just like eigendecomposition, but without the square‑matrix handcuffs. citeturn10file0
+Net effect: stretch and re‑orient, just like eigendecomposition, but without the square‑matrix handcuffs.
 
 ---
 
-## 4.3  Why the conjugate transpose? citeturn10file0
+### 4.3  Why the conjugate transpose?
 
 A complex number $z=a+bi$ can be represented as the real matrix 
 
@@ -401,7 +360,7 @@ A complex number $z=a+bi$ can be represented as the real matrix
 
 ---
 
-## 4.4  Connection to Eigendecomposition
+### 4.4  Connection to Eigendecomposition
 
 Because  
 
@@ -412,7 +371,7 @@ each of these *square* products is eigendecomposed by the same singular vectors.
 
 ---
 
-## 4.5  Properties Worth Memorising
+### 4.5  Properties Worth Memorising
 
 | Topic | Eigendecomposition | SVD |
 |-------|-------------------|-----|
@@ -423,7 +382,7 @@ each of these *square* products is eigendecomposed by the same singular vectors.
 
 ---
 
-## 4.6  How to Compute SVD in Practice
+### 4.6  How to Compute SVD in Practice
 
 > **Reality check:** hand‑cranking SVD is CFO‑level expensive—delegate to software.
 
@@ -436,7 +395,7 @@ For didactic bite‑size, analytical closed forms exist for $2\times2$ matrices 
 
 ---
 
-### Quick Pseudo‑code (conceptual)
+#### Quick Pseudo‑code (conceptual)
 
 ```
 A = input matrix
@@ -449,11 +408,9 @@ while not converged:
 extract Σ from A’s diagonal
 ```
 
-*(Real code lives in LAPACK’s `dgesdd`.)*
-
 ---
 
-## 4.7  Low‑Rank Approximations (LSA tie‑in)
+### 4.7  Low‑Rank Approximations (LSA tie‑in)
 
 Keep only the top $k$ singular values:
 
@@ -463,29 +420,13 @@ This is the **best rank‑$k$ approximation** under the Frobenius norm—exactly
 
 ---
 
-## 4.8  Cheat‑Sheet Summary
 
-1. **Decompose:** $\mathbf{A} = \mathbf{U}\boldsymbol{\Sigma}\mathbf{V}^{\*}$ always.  
-2. **Orthogonal magic:** columns of $\mathbf{U}$ and $\mathbf{V}$ are perpendicular.  
-3. **Singular values:** non‑negative scalings in descending order, squared they’re eigenvalues.  
-4. **Compression:** truncate $\sigma$’s to denoise or reduce dimensionality.  
-5. **Software:** call `numpy.linalg.svd` or your BLAS flavour—do *not* roll your own in production.
+## 5 — Latent Semantic Analysis: *Putting It All Together*
 
----
-
-© 2025-04-27
-
-# Section 5 — Latent Semantic Analysis: *Putting It All Together*
-
-> *Expanded notes based on Felipe Orihuela‑Espina’s slide deck (pp. 60‑64, 28 Oct 2024).*  
-> Here we connect the mathematical plumbing (Sections 1‑4) to the final LSA workflow and its real‑world pay‑offs. citeturn11file0
-
----
-
-## 5.1  Why SVD Beats Eigendecomposition for LSA
+### 5.1  Why SVD Beats Eigendecomposition for LSA
 
 Deerwester *et al.* (1990) rejected eigendecomposition because it assumes a **one‑mode** matrix (documents × documents).  
-LSA demands a **two‑mode** analysis (terms × documents) — a rectangular matrix. Enter SVD. citeturn11file0
+LSA demands a **two‑mode** analysis (terms × documents) — a rectangular matrix. Enter SVD.
 
 | Approach | Input matrix | Limitation for text corpora |
 |----------|--------------|-----------------------------|
@@ -494,20 +435,20 @@ LSA demands a **two‑mode** analysis (terms × documents) — a rectangular mat
 
 ---
 
-## 5.2  Low‑Rank Approximation: The Secret Sauce
+### 5.2  Low‑Rank Approximation: The Secret Sauce
 
 LSA keeps only the top $k$ singular values:
 
 $$\mathbf{X}_k = \mathbf{U}_k\,\boldsymbol{\Sigma}_k\,\mathbf{V}_k^{\top}$$
 
-Motivations citeturn11file0  
+Motivations
 * **Polysemy relief** — dimensions merge synonymous or related terms.  
 * **Computation** — in the 1990s, trimming cut memory and CPU.  
 * **Sparsity** — large vocabularies make $\mathbf{X}$ mostly zeros; SVD compresses the essence.
 
 ---
 
-## 5.3  What the Latent Space *Is* (and Isn’t)
+### 5.3  What the Latent Space *Is* (and Isn’t)
 
 * Not designed for human‑readable “topics”.  
 * **Purely geometric**: vectors in $\mathbb{R}^k$ (or $\mathbb{C}^k$) where cosine similarity captures semantic closeness.  
@@ -515,7 +456,7 @@ Motivations citeturn11file0
 
 ---
 
-## 5.4  Practical Applications
+### 5.4  Practical Applications
 
 | Domain | How LSA Helps |
 |--------|---------------|
@@ -533,16 +474,3 @@ Motivations citeturn11file0
 3. **Truncate** to rank $k$.  
 4. **Embed** documents (columns of $\boldsymbol{\Sigma}_k\mathbf{V}_k^{\top}$) and terms (columns of $\mathbf{U}_k\boldsymbol{\Sigma}_k$).  
 5. **Compare** using dot‑product / cosine.
-
----
-
-### Cheat‑Sheet
-
-* Two‑mode problem ⇒ **SVD**.  
-* Keep top $k$ singulars ⇒ noise reduction + semantic compression.  
-* Latent vectors ≠ interpretable topics, yet excel at similarity tasks.  
-* LSA laid the groundwork for modern embeddings (word2vec, BERT).
-
----
-
-© 2025-04-27
