--- a/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
+++ b/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
@@ -4,30 +4,39 @@
 
 ## 1 — Latent Semantic Analysis (Problem Statement)
 
-### 1.1  LSA credentials
+<img src="https://assets.zilliz.com/Figure_Step_by_Step_Breakdown_of_LSA_9e4b832352.png" alt="LSA" width="800">
+
+### 1.1  LSA
 Latent Semantic Analysis (LSA) surfaced in 1990 as a technique for **discovering latent concepts hidden in a document‑term co‑occurrence matrix**. At its core, LSA is just a *Singular Value Decomposition* (SVD) applied to the count matrix, so it travels well beyond text — any tall, rectangular data set with meaningful co‑occurrences can ride the same math.
-
-Key takeaways:
-
-| Fact | Insight |
-|------|---------|
-| SVD predates LSA by decades | LSA is an *application* of SVD, not a new algorithm |
-| “Latent Semantic Indexing (LSI)” in IR | Same idea, different community |
-| Handles non‑square data | Unlike PCA, which starts from a square covariance matrix |
 
 ### 1.2  From PCA to LSA — why co‑occurrence beats covariance for text
 
-1. **PCA recap**:  
-   *Data matrix* $\mathbf{X} \in \mathbb{R}^{m \times n}$ (rows = observations, columns = variables)  
-   Covariance $\mathbf{A}= \text{cov}(\mathbf{X})$ is $n\times n$, symmetric, and amenable to eigendecomposition.
+| | Doc A | Doc B | Doc C |
+|---|---|---|---|
+| **word: cat** | 2 | 0 | 0 |
+| **word: dog** | 1 | 1 | 0 |
+| **word: apple** | 0 | 0 | 3 |
+| **word: fruit** | 0 | 0 | 2 |
 
-2. **Problem**: For text, rows (terms) and columns (documents) are *different species*. A square covariance matrix would force them into the same type, losing information.
 
-3. **Solution**: Keep the raw *occurrence* matrix and factorise it directly with SVD.
+1. **PCA recap**:
+   - In PCA, you start with a matrix $\mathbf{X} \in \mathbb{R}^{m \times n}$.
+   - Rows = observations (data points)
+   - Columns = variables (features)
+   - You look at how much variables move together (covariance).
+   - You create a covariance matrix $\mathbf{A}= \text{cov}(\mathbf{X})$ is $n\times n$ — it's a square matrix.
+   - You do eigendecomposition to find the directions where variance is biggest (principal components).
+2. **Problem**:
+    - Covariance works great only when the data is clean, centered, and has a single lump (unimodal).
+    - In real-world messy data (like text), central tendency isn't good enough.
+    - Hard truth: You need another way to understand relationships: co-occurrence.
+3. **Solution**: Latent Semantic Analysis
+    - Same idea as PCA — matrix $X$ is now an occurrence matrix.
+    - Columns = documents
+    - Rows = words
+    - Each number in the matrix = how often a word appears in a document.
 
 ### 1.3  Document–Term Matrix anatomy
-
-*Notation from the slides:*
 
 | | $d_1$ | $d_2$ | … | $d_n$ |
 |---|---|---|---|---|
@@ -40,17 +49,12 @@ Key takeaways:
 * Rows $t_i$ are **term vectors**.  
 * Entries $x_{ij}$ are raw counts, TF‑IDF scores, or any weighting scheme.
 
-### 1.4  Goal statement
-
-> “Construct a semantic space wherein terms and documents that are closely associated lie near one another.”  
-
-SVD arranges that space; cosine similarity between the low‑rank vectors is our semantic proximity metric.
-
 ---
 
-### 1.5  What we already know from the module
+### 1.4  What we already know from the module
 
-#### Coordinate bases refresher (Argand diagram)
+#### 1.4.1 Coordinate bases refresher (Argand diagram)
+<img src="../../images/argand.png" alt="argand" width="200">
 
 A complex number $p = \omega_1 + \omega_2 i$ can be decomposed in the basis $\{e_1=(1,0)^T,\;e_2=(0,i)^T\}$:
 
@@ -58,83 +62,39 @@ $$p = \omega_1 e_1 + \omega_2 e_2$$
 
 Same idea generalises: choose a basis, express vectors as weighted sums of those basis vectors. LSA will **learn** a new basis that captures semantics.
 
-#### Eigendecomposition cheat‑sheet
+#### 1.4.2 Eigendecomposition
 
 For a *square*, symmetrical matrix $\mathbf{A}$:
 
-$$ \mathbf{A} = \mathbf{P}\,\mathbf{D}\,\mathbf{P}^{-1} $$
+$$ \mathbf{A} = \mathbf{P}\ \mathbf{D}\ \mathbf{P}^{-1} $$
 
 * $\mathbf{P}$ — columns are eigenvectors (basis change).  
 * $\mathbf{D}$ — diagonal of eigenvalues (axis scaling).
 
 LSA swaps eigendecomposition for SVD because $\mathbf{X}$ is rectangular. Still, the spirit — rotate to a smart basis then scale — is identical.
 
-Example 3×3 covariance matrix (presented as a table):
-
-| | $X_1$ | $X_2$ | $X_3$ |
-|---|---|---|---|
-| **$X_1$** | $\sigma^2_{X_1}$ | $\sigma_{X_1,X_2}$ | $\sigma_{X_1,X_3}$ |
-| **$X_2$** | $\sigma_{X_2,X_1}$ | $\sigma^2_{X_2}$ | $\sigma_{X_2,X_3}$ |
-| **$X_3$** | $\sigma_{X_3,X_1}$ | $\sigma_{X_3,X_2}$ | $\sigma^2_{X_3}$ |
-
----
-
-### 1.6  Putting it all together — SVD in action
-
-Given $\mathbf{X}$:
-
-$$ \mathbf{X} = \mathbf{U}\,\mathbf{\Sigma}\,\mathbf{V}^T $$
-
-* $\mathbf{U}$ — term vectors (orthonormal).  
-* $\mathbf{V}$ — document vectors (orthonormal).  
-* $\mathbf{\Sigma}$ — singular values (importance weights).
-
-#### Rank‑$k$ truncation
-
-Keep only the top $k$ singular values:
-
-$$ \mathbf{X}_k = \mathbf{U}_k\,\mathbf{\Sigma}_k\,\mathbf{V}_k^T $$
-
-*Reduces noise and reveals latent structure.* Typical $k$ values for IR are 100–300.
-
-#### Worked micro‑example (toy 4×3 matrix)
-
-| | Doc A | Doc B | Doc C |
-|---|---|---|---|
-| **word: cat** | 2 | 0 | 0 |
-| **word: dog** | 1 | 1 | 0 |
-| **word: apple** | 0 | 0 | 3 |
-| **word: fruit** | 0 | 0 | 2 |
-
-SVD captures that *cat* and *dog* cluster (pet concept), while *apple* and *fruit* cluster (food concept), even though those words never co‑occur in the same document.
-
----
-
-### 1.7  Quick reference
-
-* **Input**: raw or weighted document–term matrix.  
-* **Process**: centre/weight → SVD → truncate → normalise vectors.  
-* **Outputs**: low‑dimensional embeddings, similarity scores, dimension‑wise “topics”.
-
 ---
 
 ## 2 — Complex Conjugates & the Conjugate Transpose Matrix
 
 ### 2.1  Complex Conjugate — definition & example
+<img src="../../images/conjugate.png" alt="conjugate" width="200">
 
-A complex number $z = a + b i$ has *conjugate* $z^{\*} = a - b i$.
+A complex number $z = a + b i$, where $a$ = real part, and $b$ = imaginary part, has *conjugate* $z^{\*} = a - b i$.  
 
-| $z$ | $z^{\*}$ |
-|-----|---------|
-| $3 + 4i$ | $3 - 4i$ |
+> You flip the sign of the imaginary part.
 
-Multiplying a number by its conjugate yields a non‑negative real number:
 
-$$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
+
+
 
 ---
 
 ### 2.2  Key algebraic properties
+
+* **Product**    
+  Multiplying a number by its conjugate yields a non‑negative real number
+  $$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
 
 * **Distributive**  
   $(z + w)^{\*} = z^{\*} + w^{\*}$,   $(z - w)^{\*} = z^{\*} - w^{\*}$  
@@ -153,39 +113,19 @@ $$z\,z^{\*} = (a + b i)(a - b i)=a^2 + b^2$$
 
 ### 2.3  Why do we care?
 
+There are many reasons why complex conjugates are important, but for our use case they are important for:
 * **Undo rotations** in the Argand plane.  
-  Example: multiplying by $1+i$ rotates a vector 45°. Multiply again by its conjugate $1-i$ to rotate back.
-
-* **Algebraic simplification** (e.g. rationalising denominators).
-
-* **Polynomial roots**: complex roots appear in conjugate pairs.
-
-* **Signal processing**: Fourier transforms exploit conjugate symmetry.
-
-* **Quantum mechanics**: state vectors use conjugate transposes in inner products.
+  Example: multiplying complex vector $z$ by $1+i$ rotates the vector 45°. Multiply again by its conjugate $1-i$ to rotate back.
 
 ---
 
 ### 2.4  Conjugate Transpose (Hermitian Transpose)
+<img src="../../images/Hermitian Transpose.png" alt="Hermitian" width="600">
 
-Given $\mathbf{{A}} \in \mathbb{{C}}^{m \times n}$ with entries $z_{{ij}}$, the **conjugate transpose** $\mathbf{{A}}^{\*}$ is produced by
+Given $\mathbf{{A}} \in \mathbb{{C}}^{m \times n}$ with entries $z_{{ij}}$, the **conjugate transpose matrix**, also known as Hermitian transpose $\mathbf{{A}}^{\*}$ is produced by
 
 1. Transposing $\mathbf{{A}}$  
 2. Taking the conjugate of every entry.
-
-|      |      | … | $z_{{m1}}$ |
-|------|------|----|-----------|
-| **$\mathbf{{A}}$** | $z_{{11}}$ | … | $z_{{1n}}$ |
-| ⋮ | ⋱ | ⋱ | ⋮ |
-| $z_{{m1}}$ | … | $z_{{mn}}$ |
-
-becomes
-
-|      |      | … | $z_{{1m}}^{\*}$ |
-|------|------|----|--------------|
-| **$\mathbf{{A}}^{\*}$** | $z_{{11}}^{\*}$ | … | $z_{{m1}}^{\*}$ |
-| ⋮ | ⋱ | ⋱ | ⋮ |
-| $z_{{1n}}^{\*}$ | … | $z_{{mn}}^{\*}$ |
 
 ---
 
@@ -194,21 +134,12 @@ A square complex matrix $\mathbf{{U}}$ is **unitary** if
 
 $$\mathbf{{U}}^{\*}\mathbf{{U}} = \mathbf{{U}}\mathbf{{U}}^{\*} = \mathbf{{I}}$$
 
-Equivalently, $\mathbf{{U}}^{-1} = \mathbf{{U}}^{\*}$ — the conjugate transpose is its own inverse.
-
-*Real‑valued analogue*: orthogonal matrices satisfy $\mathbf{{Q}}^{\top}\mathbf{{Q}}=\mathbf{{I}}$.
+> Equivalently, $\mathbf{{U}}^{-1} = \mathbf{{U}}^{\*}$ — the conjugate transpose is its own inverse.  
+> *Real‑valued analogue*: orthogonal matrices satisfy $\mathbf{{Q}}^{\top}\mathbf{{Q}}=\mathbf{{I}}$.
 
 *Special unitary*: add $\det(\mathbf{{U}})=1$ and you have the group $SU(n)$.
 
 ---
-
-#### Quick Mnemonic
-
-> **“Flip and star.”**  
-> To build $\mathbf{{A}}^{\*}$, *flip* the matrix across its diagonal, then add a *star* to every entry.
-
----
-
 
 ## 3 — Matrix Inversion
 
@@ -224,7 +155,8 @@ Key points
 * Both left and right products must equal the identity: $\mathbf{A}\mathbf{A}^{-1} = \mathbf{A}^{-1}\mathbf{A} = \mathbf{I}$.  
 * Only then does $\mathbf{A}^{-1}$ truly “undo” $\mathbf{A}$.
 
-> **Why care?** We have matrix multiplication but *no defined division*.  
+> **Why care?**  
+> We have matrix multiplication but *no defined division*.  
 > To “divide” by $\mathbf{A}$, multiply by $\mathbf{A}^{-1}$ instead:  
 > If $\mathbf{X}\mathbf{A} = \mathbf{B}$, then $\mathbf{X} = \mathbf{B}\mathbf{A}^{-1}$.
 
@@ -233,17 +165,13 @@ Key points
 ### 3.2  Existence & Uniqueness Theorems
 
 #### Theorem 1 — Only square matrices can have an inverse  
-*Proof sketch*: Assume $\mathbf{A}$ is $n\times m$ with $n\neq m$.  
-Equality $\mathbf{A}\mathbf{A}^{-1}= \mathbf{I}_n$ forces $\mathbf{A}^{-1}$ to be $m\times n$;  
-$\mathbf{A}^{-1}\mathbf{A}= \mathbf{I}_m$ forces the same size.  
-This is only simultaneously possible if $n=m$.
+*Proof sketch*:  
+- Assume $\mathbf{A}$ is $n\times m$ with $n\neq m$.
+  - Equality $\mathbf{A}\mathbf{A}^{-1}= \mathbf{I}_n$ forces $\mathbf{A}^{-1}$ to be $m\times n$;
+  - $\mathbf{A}^{-1}\mathbf{A}= \mathbf{I}_m$ forces the same size.
+- This is only simultaneously possible if $n=m$.
 
 #### Theorem 2 — Inverse is unique (when it exists)  
-If $\mathbf{B}$ and $\mathbf{C}$ both satisfy the inverse property,  
-$$\mathbf{B} = \mathbf{B}(\mathbf{A}\mathbf{C}) = (\mathbf{B}\mathbf{A})\mathbf{C} = \mathbf{C}$$
-
-#### Theorem 3 — Existence iff $\det(\mathbf{A})\neq 0$  
-The adjoint‑based formula below shows the determinant in the denominator; zero would be illegal.
 
 ---
 
