Update 05. Dimensional analysis by by co-ocurrence.md

--- a/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
+++ b/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
@@ -173,6 +173,9 @@ Key points
 
 #### Theorem 2 — Inverse is unique (when it exists)  
 
+#### Theorem 3 — Existence iff $\det(\mathbf{A})\neq 0$  
+The adjoint‑based formula we will see now shows the determinant in the denominator; zero would be illegal.
+
 ---
 
 ### 3.3  Adjoint (Cofactor) Method
@@ -193,6 +196,8 @@ Example $3\times3$ template (sign‑adjusted):
 Collect these into the **cofactor matrix** $\text{cof}(\mathbf{A})$; transpose to get the **adjoint** $\text{adj}(\mathbf{A})$.
 
 #### 3.3.2  Key identity  
+<img src="../../images/Adjoint.png" alt="Adjoint" width="600">
+
 $$\mathbf{A}\,\text{adj}(\mathbf{A}) = \text{adj}(\mathbf{A})\,\mathbf{A} = \det(\mathbf{A})\mathbf{I}$$
 
 #### 3.3.3  Inverse formula  
@@ -210,40 +215,30 @@ Given
 | **Row 2** | $3$ | $0$ | $1$ |
 | **Row 3** | $2$ | $-1$ | $3$ |
 
-1. **Determinant**: $\det(\mathbf{A})=-26$ (slide computation).  
-2. **Cofactor matrix** $\text{cof}(\mathbf{A})$ (already sign‑corrected):
+1. **Determinant**:
+   - $det(A) = a11A11+a21A21+a31A31 = 8·1+3·−14+2·4 = 8−42+8 = −26$.  
+2. **Cofactor matrix** $\text{cof}(\mathbf{A})$ (already sign‑corrected):      
+<img src="../../images/cof(A).png" alt="cof(A)" width="400">
 
-| | | | |
-|---|---|---|---|
+
 | $1$ | $-7$ | $-3$ |
+|---|---|---|
 | $-14$ | $20$ | $16$ |
 | $4$ | $-2$ | $-12$ |
 
 3. **Adjoint** (transpose):
 
-| | | | |
-|---|---|---|---|
 | $1$ | $-14$ | $4$ |
+|---|---|---|
 | $-7$ | $20$ | $-2$ |
 | $-3$ | $16$ | $-12$ |
 
 4. **Divide each entry by $\det(\mathbf{A})$** to get $\mathbf{A}^{-1}$:
 
-| | | | |
-|---|---|---|---|
 | $-\dfrac{1}{26}$ | $\dfrac{14}{26}$ | $-\dfrac{4}{26}$ |
+|---|---|---|
 | $\dfrac{7}{26}$ | $-\dfrac{20}{26}$ | $\dfrac{2}{26}$ |
 | $\dfrac{3}{26}$ | $-\dfrac{16}{26}$ | $\dfrac{12}{26}$ |
-
-*Challenge*: Verify $\mathbf{A}\mathbf{A}^{-1}=\mathbf{I}$.
-
----
-
-### 3.4  Practical Notes
-
-* **Adjoint method** is $O(n!)$ for determinant → unwise for $n\gt3$.  
-* **Gauss‑Jordan** (augment with $\mathbf{I}$, row‑reduce) is $O(n^3)$ and numerically stabler.  
-* **Moore–Penrose pseudo‑inverse** generalises the concept to non‑square or singular matrices (beyond today’s scope).
 
 ---
 
