Update 05. Dimensional analysis by by co-ocurrence.md

--- a/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
+++ b/notes/Intelligent-data-analysis/05. Dimensional analysis by by co-ocurrence.md
@@ -243,6 +243,8 @@ Given
 ---
 
 ## 4 — Singular Value Decomposition (SVD)
+Singular Value Decomposition (SVD) is a matrix factorization technique i.e. it decomposes a matrix into
+a product of other matrices. SVD is the generalization of the eigendecomposition for non-square matrices.
 
 ### 4.1  Core Factorisation
 
@@ -252,15 +254,15 @@ $$\mathbf{A} = \mathbf{U}\,\boldsymbol{\Sigma}\,\mathbf{V}^{\*}$$
 
 | Symbol | Size | Role |
 |--------|------|------|
-| $\mathbf{U}$ | $m \times m$ | **Left singular vectors** — columns are orthonormal |
-| $\boldsymbol{\Sigma}$ | $m \times n$ | **Singular values** on the diagonal: $\sigma_{1}\ge\sigma_{2}\ge\dots\ge0$ |
+| $\mathbf{U}$ | $m \times m$ | Complex unitary matrix |
+| $\boldsymbol{\Sigma}$ | $m \times n$ | diagonal matrix with non-negative real numbers on the diagonal |
 | $\mathbf{V}^{\*}$ | $n \times n$ | Conjugate‑transpose of $\mathbf{V}$; columns of $\mathbf{V}$ are right singular vectors |
 
 When $\mathbf{A}$ is real, $\mathbf{V}^{\*}$ simplifies to $\mathbf{V}^{\top}$. 
 
----
 
 ### 4.2  Interpretation: Rotate → Scale → Derotate
+<img src="https://blogs.sas.com/content/iml/files/2017/08/svd1.png" alt="SVD" width="400">
 
 1. **$\mathbf{V}^{\*}$** rotates input coordinates to a “nice” basis.  
 2. **$\boldsymbol{\Sigma}$** scales each axis by $\sigma_{i}$.  
@@ -272,14 +274,16 @@ Net effect: stretch and re‑orient, just like eigendecomposition, but without t
 
 ### 4.3  Why the conjugate transpose?
 
-A complex number $z=a+bi$ can be represented as the real matrix 
+A complex number $z=a+bi$ can act like a rotation on points in 2D space.   
+We can rewrite $z$ as a 2×2 matrix:
 
-| | |
-|---|---|
 | $a$ | $-b$ |
+|---|---|
 | $b$ | $a$ |
 
-— a bona‑fide 2‑D rotation. Conjugate transpose in SVD mirrors this logic for higher dimensions: we rotate in a unitary space, and taking the “$^{\*}$” ensures angles and lengths survive the journey.
+- Multiplying by this matrix rotates and scales points.
+- Conjugate transpose appears because it's part of handling rotations in Singular Value Decomposition (SVD).
+
 
 ---
 
@@ -290,110 +294,63 @@ Because
 $$\mathbf{A}\mathbf{A}^{\*} = \mathbf{U}\,(\boldsymbol{\Sigma}\boldsymbol{\Sigma}^{\*})\,\mathbf{U}^{\*}, \qquad 
 \mathbf{A}^{\*}\mathbf{A} = \mathbf{V}\,(\boldsymbol{\Sigma}^{\*}\boldsymbol{\Sigma})\,\mathbf{V}^{\*}$$
 
-each of these *square* products is eigendecomposed by the same singular vectors. The eigenvalues are $\sigma_i^{2}$. Hence eigendecomposition is just the SVD of a matrix that happened to be square. citeturn10file0
+each of these *square* products is eigendecomposed by the same singular vectors. The eigenvalues are $\sigma_i^{2}$. Hence eigendecomposition is just the SVD of a matrix that happened to be square.
 
----
 
 ### 4.5  Properties Worth Memorising
+Let be the eigendecomposition $A = PDP^{−1}$ and the SVD $A = UΣV$ ∗;
 
 | Topic | Eigendecomposition | SVD |
 |-------|-------------------|-----|
 | Existence | Only if $\mathbf{A}$ is square and diagonalizable | **Always exists** |
-| Vector orthogonality | Not guaranteed | **Guaranteed** |
-| Values | Eigenvalues can be negative or complex | $\sigma_i \ge 0$, real |
+| Vector orthogonality | Not guaranteed (Unless for PCA) | **Guaranteed** |
+| Values | Eigenvalues can be negative or complex | Singular values are real and non-negative |
 | Inverses | $\mathbf{P}^{-1}$ is $\mathbf{P}^{\*}$ *only* for Hermitian | $\mathbf{U}^{\*}\mathbf{U} = \mathbf{I}$, $\mathbf{V}^{\*}\mathbf{V}=\mathbf{I}$ |
 
----
-
-### 4.6  How to Compute SVD in Practice
-
-> **Reality check:** hand‑cranking SVD is CFO‑level expensive—delegate to software.
-
-* **Lanczos / Krylov methods** — fast for top $k$ singular triplets (think LSA/LSI), but watch numerical stability.  
-* **One‑sided Jacobi** — iteratively orthogonalises columns.  
-* **Two‑sided Jacobi (Givens rotations)** — generalises the eigen Jacobi algorithm.  
-* **QR‑based routines** — industry default inside LAPACK.  
-
-For didactic bite‑size, analytical closed forms exist for $2\times2$ matrices (see Wikipedia) but rely on Pauli matrices, out of scope here. citeturn10file0
 
 ---
 
-#### Quick Pseudo‑code (conceptual)
-
-```
-A = input matrix
-U, Σ, Vt = zeros
-while not converged:
-    find pivot (p,q)
-    compute Jacobi rotation θ
-    A = A * J(p,q,θ)
-    accumulate U and Vt
-extract Σ from A’s diagonal
-```
-
----
-
-### 4.7  Low‑Rank Approximations (LSA tie‑in)
-
-Keep only the top $k$ singular values:
-
-$$\mathbf{A}_k = \mathbf{U}_k \boldsymbol{\Sigma}_k \mathbf{V}_k^{\*}$$
-
-This is the **best rank‑$k$ approximation** under the Frobenius norm—exactly what Latent Semantic Analysis exploits to uncover hidden topics.
-
----
-
-
-## 5 — Latent Semantic Analysis: *Putting It All Together*
-
-### 5.1  Why SVD Beats Eigendecomposition for LSA
+## 5 - Latent Semantic Analysis
 
 Deerwester *et al.* (1990) rejected eigendecomposition because it assumes a **one‑mode** matrix (documents × documents).  
 LSA demands a **two‑mode** analysis (terms × documents) — a rectangular matrix. Enter SVD.
 
-| Approach | Input matrix | Limitation for text corpora |
-|----------|--------------|-----------------------------|
-| Eigen‑decomposition | $\mathbf{X}^{\top}\mathbf{X}$ (square) | Collapses terms and docs into the same “kind” |
-| **SVD (LSA)** | $\mathbf{X}$ ($m$ terms × $n$ docs) | Handles two distinct entity types |
+### 5.1  Low‑Rank Approximation
 
+After building a **term-document matrix** (words vs documents),  
+**LSA applies SVD** to create a **low-rank approximation** — a simplified version that retains the important structure.
+
+#### Why Do This?
+
+- **Semantic compression**  
+  Groups similar words (e.g., *car*, *vehicle*) into shared dimensions → helps with **polysemy** (words with multiple meanings).
+
+- **Computational savings**  
+  In the 1990s, full matrices were too big. Lowering the rank reduced memory and processing needs.
+
+- **Sparsity problem**  
+  Large vocabularies make matrices mostly zeros.  
+  **SVD fills in the semantic blanks** by uncovering hidden structure.
 ---
 
-### 5.2  Low‑Rank Approximation: The Secret Sauce
+### 5.2  What the Latent Space *Is* (and Isn’t)
 
-LSA keeps only the top $k$ singular values:
+The new dimensions LSA creates **do not represent interpretable concepts**.  
+They are **latent dimensions** — compressed patterns learned from the data.
 
-$$\mathbf{X}_k = \mathbf{U}_k\,\boldsymbol{\Sigma}_k\,\mathbf{V}_k^{\top}$$
+- Don’t expect them to be things like “sports” or “finance”
+- They just approximate the original high-dimensional space in a **more compact, useful form**
 
-Motivations
-* **Polysemy relief** — dimensions merge synonymous or related terms.  
-* **Computation** — in the 1990s, trimming cut memory and CPU.  
-* **Sparsity** — large vocabularies make $\mathbf{X}$ mostly zeros; SVD compresses the essence.
+#### Why This Space Is Powerful
 
----
+- **Clustering** similar documents or terms  
+  (*e.g., news articles about cars group together*)
 
-### 5.3  What the Latent Space *Is* (and Isn’t)
+- **Information retrieval**  
+  (*e.g., finding semantically related search results*)
 
-* Not designed for human‑readable “topics”.  
-* **Purely geometric**: vectors in $\mathbb{R}^k$ (or $\mathbb{C}^k$) where cosine similarity captures semantic closeness.  
-* Works because distributional statistics encode meaning indirectly.
+- **Feature generation**  
+  LSA produces **new variables** useful for machine learning.
 
----
-
-### 5.4  Practical Applications
-
-| Domain | How LSA Helps |
-|--------|---------------|
-| **Information retrieval** | Rank documents by cosine similarity in latent space; improves recall for synonymy & polysemy. |
-| **Variable clustering / classification** | Group words or docs without manual labels. |
-| **Feature engineering** | Feed dense latent vectors into downstream ML models. |
-| **Query expansion & matching** | Map user queries to conceptually related terms, boosting search quality. |
-
----
-
-### Workflow Recap
-
-1. **Build** term‑document matrix $\mathbf{X}$ (counts or TF‑IDF).  
-2. **Factorise** via SVD → $\mathbf{U}, \boldsymbol{\Sigma}, \mathbf{V}^{\top}$.  
-3. **Truncate** to rank $k$.  
-4. **Embed** documents (columns of $\boldsymbol{\Sigma}_k\mathbf{V}_k^{\top}$) and terms (columns of $\mathbf{U}_k\boldsymbol{\Sigma}_k$).  
-5. **Compare** using dot‑product / cosine.
+- **Matching**  
+  Helps compare things (e.g., documents, queries) based on **hidden structure**.
