Update and rename AI_Decision_Making_Ethics_Trust_Cooperation_Easy_Read (1).md to 03. AI Decision Making Ethics, Trust, and Cooperation .md

--- a/notes/Intelligent-interactive-systems/03. AI Decision Making Ethics, Trust, and Cooperation .md
+++ b/notes/Intelligent-interactive-systems/03. AI Decision Making Ethics, Trust, and Cooperation .md
@@ -1,7 +1,6 @@
 
-# **AI, Decision‑Making & Society — A Plain‑English Field Guide**
+# **AI, Decision‑Making & Society**
 
-*Built for busy professionals, policy wonks, and curious readers who don’t speak “machine‑learning”.*
 
 ---
 
@@ -33,12 +32,9 @@ This guide shows **how AI decides**, **why trust matters**, and **what a healthy
 * Utility of “arrive late” = 0.  
 * Scooter probability of failure = 20 %.  
 
-\[
-\text{Expected Utility}_{\text{scooter}} = 0.8 × 10 + 0.2 × 0 = 8  
-\]
-\[
-\text{Expected Utility}_{\text{walk}} = 1.0 × 6 = 6  
-\]
+$$\text{Expected Utility}_{\text{scooter}} = 0.8 × 10 + 0.2 × 0 = 8$$
+
+$$\text{Expected Utility}_{\text{walk}} = 1.0 × 6 = 6$$
 
 > **Result:** You hop on the scooter.  
 That’s EUT in action.
