Update and rename LDA_Topic_Modeling_Notes.md to 05. LDA Topic Modeling Notes.md

--- a/notes/Intelligent-interactive-systems/05. LDA Topic Modeling Notes.md
+++ b/notes/Intelligent-interactive-systems/05. LDA Topic Modeling Notes.md
@@ -1,20 +1,18 @@
 # Latent Dirichlet Allocation (LDA) & Related Concepts  
-*Concise, plain‑English annotated notes sourced from the uploaded readings*
 
----
 
-**1. Why “Topics” at All?**  
+## 1. Why “Topics” at All?
 Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden themes**) models documents as blends of underlying *topics* (word-distribution patterns) instead of raw word bags. This cuts noise, reveals structure, and feeds downstream tasks like classification.
 
 ---
 
-**2. From Raw Counts to Smarter Counts**  
+## 2. From Raw Counts to Smarter Counts
 1. **tf‑idf (term frequency–inverse document frequency — how often a word appears, discounted if it’s everywhere)** turns each document into a vector of weighted counts.  
 2. **Singular Value Decomposition (SVD — matrix‑factoring shortcut that keeps only dominant patterns)** underlies **Latent Semantic Indexing (LSI — early “semantic space” trick)**, projecting the huge *document × word* grid into a compact latent space that loosely captures synonymy/polysemy.
 
 ---
 
-**3. Probabilistic Turn: Comparing Topic Models**  
+## 3. Probabilistic Turn: Comparing Topic Models
 
 | Model | Plain‑English Pitch | Advantages | Limitations |
 |-------|--------------------|------------|-------------|
@@ -24,7 +22,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**4. LDA’s Generative Process (Decoded)**  
+## 4. LDA’s Generative Process (Decoded)
 1. Draw **θ (theta — the doc’s topic pie‑chart)** from a **Dirichlet distribution Dir(α) — random generator for proportions that sum to 1**.  
 2. For each of *N* word slots:  
    1. Pick a **topic *z*** from *θ* (**Multinomial — multi‑sided dice**).  
@@ -34,7 +32,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**5. Inference & Learning**  
+## 5. Inference & Learning
 
 | Term | Plain English |
 |------|---------------|
@@ -46,7 +44,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**6. Practical Pipeline (Python + gensim example)**  
+## 6. Practical Pipeline (Python + gensim example)
 1. **Tokenize** → split text.  
 2. **Lowercase & stop‑word filter**.  
 3. **Stem/Lemmatize** to merge word variants.  
@@ -57,7 +55,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**7. Applications**  
+## 7. Applications
 - **Document modelling** — assign probabilities to new text.  
 - **Dimensionality reduction** — feed γ into SVMs; smaller feature set, similar accuracy.  
 - **Collaborative filtering** — treat users as docs, items as words to predict preferences.  
@@ -65,13 +63,13 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**8. Clustering Background**  
+## 8. Clustering Background
 **K‑means (hard clustering — one cluster per doc)** minimizes **RSS (Residual Sum of Squares — total squared distance)**.  
 **EM with Gaussian/Bernoulli mixtures (soft clustering)** outputs fractional memberships.
 
 ---
 
-**9. Evaluation Metrics**  
+## 9. Evaluation Metrics
 
 | Metric | Measures | Quirks |
 |--------|----------|--------|
@@ -83,7 +81,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**10. Extensions & Limitations**  
+## 10. Extensions & Limitations
 - **Correlated/Dynamic/Hierarchical LDA** relax independence, track time, build topic trees.  
 - **Beyond Bag‑of‑Words**: add n‑grams or syntax to keep phrase context.  
 - **Choosing *K***: use topic coherence or downstream scores.  
@@ -91,7 +89,7 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 
 ---
 
-**11. Quick Glossary**  
+## 11. Quick Glossary**  
 
 | Term | Meaning |
 |------|---------|
@@ -100,7 +98,3 @@ Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden the
 | **Multinomial** | Generalized dice for discrete outcomes |
 | **Exchangeability** | Order irrelevance assumption |
 | **Soft clustering** | Allowing partial membership in multiple groups |
-
----
-
-*End of guide.*  
