Update and rename Responsible_AI_LLMs_Lecture_Notes.md to 0.7 Responsible LLMs.md

--- a/notes/Intelligent-interactive-systems/0.7 Responsible LLMs.md
+++ b/notes/Intelligent-interactive-systems/0.7 Responsible LLMs.md
@@ -1,10 +1,6 @@
-# Responsible AI & Large Language Models – Lecture Notes
+# Responsible AI & Large Language Models
 
-*GitHub‑ready Markdown*
-
----
-
-## **1. Language Models (LMs)**  
+## 1. Language Models (LMs)
 
 1. **Neural Language Model** – *probability engine* that guesses the next word using all previous words.  
 2. **Transformer architecture** – *attention‑powered circuitry* that lets the model focus on every part of the sentence at once.  
@@ -14,7 +10,7 @@
 
 ---
 
-## **2. Core Terminology**
+## 2. Core Terminology
 
 | #   | Technical Term                | Plain‑English Translation                         |
 |-----|------------------------------|---------------------------------------------------|
@@ -27,7 +23,7 @@
 
 ---
 
-## **3. Popularisation of LMs**
+## 3. Popularisation of LMs
 
 1. **GPT lineage** – GPT‑1 (2018) → GPT‑2 (2019) → GPT‑3 (2020) → GPT‑4 (2023‑25): each leap multiplies parameters and fluency.  
 2. **Media moment** – *The Guardian* headline “A robot wrote this article” sparked mainstream curiosity.  
@@ -37,7 +33,7 @@
 
 ---
 
-## **4. Responsible AI & Model Limitations**
+## 4. Responsible AI & Model Limitations
 
 | Risk Pillar       | Plain‑English Meaning      | Typical Symptoms         |
 |-------------------|----------------------------|--------------------------|
@@ -52,7 +48,7 @@
 
 ---
 
-## **5. Bias – What & Why**
+## 5. Bias – What & Why
 
 - **Definition:** Systematic, unfair preference for—or against—specific groups.  
 - **Impacts:** Amplifies inequality, generates toxic language, invites legal exposure.  
@@ -70,7 +66,7 @@
 
 ---
 
-## **6. Alignment & Safety Techniques**
+## 6. Alignment & Safety Techniques
 
 1. **Fine‑tuning w/ PALMS** – Train on value‑targeted data; boosts safety but narrows versatility.  
 2. **RLHF (Reinforcement Learning from Human Feedback)** – Human raters score outputs; model learns “what good looks like.”  
@@ -82,13 +78,9 @@
 
 ---
 
-## **7. Conclusion**
+## 7. Conclusion
 
 - Transformers dominate modern NLP due to contextual attention.  
 - Model race continues, but **Responsible AI** dictates market viability.  
 - Key challenges—bias, explainability, robustness, security—require a layered mitigation stack (data, model, prompt, policy).  
 - Future‑proof strategy: combine **governance frameworks** with agile model iteration to align LLM capability with human values and business objectives.
-
----
-
-*End of lecture notes*
