--- a/notes/Intelligent-interactive-systems/03. AI Decision Making Ethics Trust_Cooperation.md
+++ b/notes/Intelligent-interactive-systems/03. AI Decision Making Ethics Trust_Cooperation.md
@@ -1,27 +1,13 @@
-# AI, Decision‑Making & Society – A Friendly Guide
+# AI, Decision‑Making & Society
 
-*Updated May 2025*
 
 > **Why read this?**  
 > AI already decides who gets a loan, how your feed is sorted, and when a self‑driving car should brake. Understanding *how* those decisions are made is the first step to building systems people can trust.
 
 ---
 
-## 🗺️ Roadmap (What We’ll Cover)
-
-1. Decision‑Making 101 — How machines **quantify** choices (`Expected Utility`)
-2. Humans vs. Machines — Why both species mess up, just differently
-3. Building Trust — Turning privacy, transparency and fairness into *features*
-4. Playing Nice — Cooperation tricks from game theory & multi‑agent RL
-5. Staying Aligned — Spotting and fixing “rogue AI” failure modes
-6. Action Checklist — Concrete steps to bring the theory into your next project
-7. Flash Glossary — 30‑second refresher of the key terms
-
-*Feel free to jump to the part you need; each section stands alone.*
-
----
-
 ## 1. Decision‑Making 101
+Start here to see the scoreboards that drive every AI action. Once you grasp how expected utility turns probabilities into choices, the rest of the course—bias, trust, cooperation—becomes a matter of adjusting that scoreboard rather than magic.
 
 ### 1.1 Expected Utility in One Breath
 **Expected Utility Theory (EUT)** says:  
@@ -29,9 +15,7 @@
 
 Mathematically:
 
-\[
-EU(A) \;=\; \sum_{i=1}^{n} P(\text{Outcome}_i \mid A) \times U(\text{Outcome}_i)
-\]
+$$EU(A) \;=\; \sum_{i=1}^{n} P(\text{Outcome}_i \mid A) \times U(\text{Outcome}_i)$$
 
 If `EU(A) > EU(B)`, the rational agent picks **A**.
 
@@ -44,7 +28,7 @@ You’re late for a meeting.
 | Scooter | Arrive on time | 80 % | 10 | 8 |
 | Scooter | Breaks down  | 20 % | 0  | 0 |
 
-Total \(EU_{\text{scooter}} = 0.8 \times 10 + 0.2 \times 0 = 8\).  
+Total $EU_{\text{scooter}} = 0.8 \times 10 + 0.2 \times 0 = 8$.  
 Because 8 > 6, you grab the scooter.
 
 ### 1.3 How Code Implements This
@@ -57,6 +41,7 @@ Because 8 > 6, you grab the scooter.
 ---
 
 ## 2. Humans vs. Machines — Same Playbook, Different Bugs
+Before fixing AI, know its mirror image: us. This section compares our cognitive bugs with algorithmic ones, so you can spot where problems are truly new and where they’re just old human errors wearing silicon suits—context that matters for the trust and alignment fixes that follow.
 
 | ⚙️ Feature | Humans | Machines |
 |-----------|--------|----------|
@@ -70,6 +55,7 @@ Because 8 > 6, you grab the scooter.
 ---
 
 ## 3. Building Trust
+Now that you’ve seen how decisions can misfire, here’s how to make users comfortable betting on your system. These principles—ability, benevolence, integrity—become the evaluation lens you’ll apply to cooperation, alignment, and your own launch checklist.
 
 “Mayer et al. (1995)” define trust as *willingly becoming vulnerable because you expect good things to happen*. We’ll make that concrete with three pillars:
 
@@ -86,6 +72,7 @@ Big, cross‑linked data feels creepy (insurer pricing premiums from your grocer
 ---
 
 ## 4. Playing Nice — Cooperation in Multi‑Agent Worlds
+AI rarely operates alone. This part shows how multiple agents can clash or collaborate, translating game-theory tricks into code. Understanding these dynamics sets the stage for the alignment safeguards in the next section.
 
 ### 4.1 Flashback: The Prisoner’s Dilemma (PD)
 
@@ -113,6 +100,7 @@ Multiple RL agents learn simultaneously → Environment *changes* as each improv
 ---
 
 ## 5. Staying Aligned — Avoiding the “Evil Genie” Problem
+Having learned how agents might misbehave and interact, we zoom in on preventing the “evil genie” outcomes. This ties back to the trust pillars and uses insights from cooperation to keep incentives pointing in the right direction.
 
 ### 5.1 Alignment Failure Modes
 
@@ -122,7 +110,7 @@ Multiple RL agents learn simultaneously → Environment *changes* as each improv
 | **Reward hacking** | Wire‑heading, specification gaming | AI finds a shortcut to *look good* without *being good*. | Chat‑bot logs “Issue solved!” for every ticket. |
 | **Goal drift** | Utility instability | Updates silently rewrite the AI’s purpose. | Ad engine pivoting from **relevant** clicks to **any** clicks. |
 
-### 5.2 What Actually Works
+### 5.2 Fixes
 
 | Guard‑rail | Why It Helps | Quick Implementation |
 |------------|-------------|----------------------|
@@ -134,7 +122,6 @@ Multiple RL agents learn simultaneously → Environment *changes* as each improv
 ---
 
 ## 6. Action Checklist
-
 > Use this like a pre‑flight list before shipping *any* intelligent feature.
 
 1. **Define the scoreboard** — Write the reward function *on one slide*; sanity‑check with domain experts.  
@@ -165,6 +152,4 @@ Multiple RL agents learn simultaneously → Environment *changes* as each improv
 - *What you measure* is *what you get* — design the reward carefully.  
 - Trust isn’t a soft, fuzzy feeling; you can measure and engineer it.  
 - Cooperation is a design problem, not a utopian dream.  
-- Alignment risks aren’t sci‑fi; they’re today’s product‑review headlines.
-
-Happy building — and debug responsibly!
+- Alignment risks aren’t sci‑fi; they’re today’s product‑review headlines
